--- a/src/components/Containers/containers.scss
+++ b/src/components/Containers/containers.scss
@@ -13,6 +13,21 @@
   }
 }
 
+.rules .main-container {
+  background: rgba(0, 0, 0, 0.9);
+  .main-background__circle7,
+  .main-background__circle6,
+  .main-background__rect5 {
+    display: none;
+  }
+  .main-background__rect3 {
+    top: 80%;
+  }
+  .main-background__rect2 {
+    top: 67%;
+  }
+}
+
 .dark-container {
   // width: 100%;
   // height: 100%;
@@ -192,4 +207,3 @@
     }
   }
 }
-
