add redux token & isAuth

--- a/src/components/AuthInput/input.scss
+++ b/src/components/AuthInput/input.scss
@@ -16,3 +16,19 @@
   left: 22px;
 }
 
+.MuiInputBase-root.MuiOutlinedInput-root.MuiInputBase-formControl {
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus,
+  textarea:-webkit-autofill,
+  textarea:-webkit-autofill:hover,
+  textarea:-webkit-autofill:focus,
+  select:-webkit-autofill,
+  select:-webkit-autofill:hover,
+  select:-webkit-autofill:focus {
+    border: unset;
+    -webkit-text-fill-color: black;
+    -webkit-box-shadow: unset;
+    transition: background-color 5000s ease-in-out 0s;
+  }
+}
