--- a/src/pages/questions.scss
+++ b/src/pages/questions.scss
@@ -333,7 +333,7 @@
 .green-bg.green-bg_loose {
   background: url("../assets/img/proval.png");
   background-repeat: no-repeat;
-  background-position: center -60%;
+  background-position: center bottom;
   background-size: revert;
   @media screen and (max-width: 767px) {
     background: url("../assets/img/que.png");
@@ -398,7 +398,8 @@
     text-align: center;
     max-width: 500px;
     color: #ffffff;
-    margin-bottom: 180px;
+    min-height: 72px;
+    margin-bottom: 200px;
     @media screen and (max-width: 767px) {
     }
   }
