--- a/src/pages/addposts.scss
+++ b/src/pages/addposts.scss
@@ -6,7 +6,7 @@
       height: 490px;
       border-radius: 50%;
       background: rgba(0, 0, 0, 0.95);
-      top: -27%;
+      top: -242px;
       transform: translateX(-19%);
     }
     .archive-page__content {
