--- a/src/components/TestSlide/testslide.scss
+++ b/src/components/TestSlide/testslide.scss
@@ -3,7 +3,7 @@
   width: 500px;
   // width: 100% !important;
   transition: 0.5s;
-  padding: 30px 20px 50px 60px;
+  padding: 30px 20px 115px 60px;
   position: relative;
   background-color: black;
   border-radius: 20px;
@@ -33,6 +33,42 @@
     text-transform: uppercase;
     margin-bottom: 10px;
   }
+  .test-slide__progress {
+    width: 100%;
+    position: absolute;
+    bottom: 1px;
+    left: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 65px;
+    font-weight: normal;
+    font-size: 36px;
+    line-height: 44px;
+
+    letter-spacing: 0.149263px;
+    border-radius: 0 0 20px 20px;
+    color: #000000;
+    // box-shadow: 0px 13px 13px rgba(0, 0, 0, 0.25);
+    
+    .test-slide__progress_field,
+    .test-slide__progress_space {
+      position: absolute;
+      height: 100%;
+      // border-radius: 0 0 20px 20px;
+    }
+    .test-slide__progress_field {
+      border-radius: 0 0 0 20px;
+      left: 0;
+      // box-shadow: 0px 13px 13px rgb(0 0 0 / 25%)
+    }
+    .test-slide__progress_space {
+      background: white;
+      border-radius: 0 0 20px 0;
+      right: 0;
+      // box-shadow: 0px 13px 13px rgb(0 0 0 / 25%)
+    }
+  }
   .test-slide__row {
     display: flex;
     align-items: flex-end;
@@ -50,8 +86,6 @@
         margin-right: 10px;
       }
     }
-    .test-slide__time {
-    }
     .test-slide__price {
       margin-left: 20px;
     }
@@ -62,12 +96,21 @@
       @media screen and (max-width: 1612px) {
         margin-left: 22px;
       }
+      @media screen and (max-width: 767px) {
+        width: 40px;
+        height: 40px;
+      }
+      @media screen and (max-width: 520px) {
+        width: 30px;
+        height: 30px;
+      }
     }
 
     @media screen and (max-width: 1612px) {
       font-size: 22px;
     }
   }
+
   @media screen and (max-width: 767px) {
     width: 100%;
     min-width: 158px;
