--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -80,6 +80,12 @@
           display: none;
         }
       }
+      &:nth-child(4) {
+        display: none;
+        @media screen and (max-width: 767px) {
+          display: flex;
+        }
+      }
       a {
         &::before {
           content: "";
